# Gemini-Live-Agent-Challenge-Mar-2026

./: .env  .gcloudignore  .gitignore  README.md  cloudbuild.yaml
Live-Agent-New-Version/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  pyproject.toml
Live-Agent-New-Version/app/: lifecycle.py  main.py
Live-Agent-New-Version/app/agents/: agent_tools.py  patient_agent.py
Live-Agent-New-Version/app/api/: protocol.py  scenarios.py  websocket_gateway.py
Live-Agent-New-Version/app/configs/: model_config.yaml  rag_config.yaml  runtime_config.yaml
Live-Agent-New-Version/app/core/: config.py  constants.py  logging.py
Live-Agent-New-Version/app/models/: model_manager.py
Live-Agent-New-Version/app/rag/: cli.py  controller.py  engine.py  kb_loader.py  knowledge_loader.py  live_session.py  llm.py  retriever.py  scope.py
Live-Agent-New-Version/app/services/: agent_service.py  diarization_service.py  session_service.py
Live-Agent-New-Version/docs/: websocket_protocol.md
Live-Agent-New-Version/kb/: CASE_TEMPLATE.md  global_dental.yaml  global_policy.yaml
Live-Agent-New-Version/knowledge_base/general/: global_policy.yaml
Live-Agent-New-Version/knowledge_base/senario1/: cost_budget.yaml  dental_history.yaml  opening.yaml  trade_off_reaction.yaml
Live-Agent-New-Version/scripts/: run_local.sh  setup_env.sh
Live-Agent-New-Version/static/: app.js  index.html  pcm-processor.js
Live-Agent-New-Version/terraform/: cloud_run.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
llm_service/: LLM.py
ui/: App.tsx  (+7 more)
(+26 files in other folders)
